# kdtree-rs

./: .releaserc.yml  Cargo.toml  README.md  criterion-const-generics.ndjson  criterion-kdtree.ndjson  criterion-kiddo.ndjson  criterion-master.ndjson  generate_benchmark_charts.py  replace-doc-version-strings.sh
.github/workflows/: release.yml
benches/: add_points.rs  bench.rs  best_within_3d_unit_sphere.rs  nearest_3d_unit_sphere.rs  within_3d_unit_sphere.rs
src/: custom_serde.rs  distance.rs  kdtree.rs  kiddo.rs  lib.rs  stack.rs  util.rs
tests/: count_dist.rs  kdtree.rs  serde.rs
