[package]
name = "kdtree"
version = "1.0.0"
authors = ["Rui Hu <code@mrhooray.com>"]
description = "K-dimensional tree in Rust for fast geospatial indexing and nearest neighbors lookup"
keywords = ["tree", "nearest", "neighbor", "search", "geo"]
readme = "README.md"
repository = "https://github.com/mrhooray/kdtree-rs"
documentation = "https://docs.rs/kdtree"
license = "MIT OR Apache-2.0"
autobenches = false

[dev-dependencies]
rand = "0.6.5"
lazy_static = "1.4.0"
criterion = "0.3.4"
aligned = "0.3.4"

[dependencies]
num-traits = "0.2"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
aligned = "0.3.4"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[features]
serialize = ["serde", "serde_derive"]

[[bench]]
name = "add_points"
harness = false

[[bench]]
name = "nearest_3d_unit_sphere"
harness = false

[[bench]]
name = "within_3d_unit_sphere"
harness = false

[[bench]]
name = "best_within_3d_unit_sphere"
harness = false
