[package]
name = "kiddo"
version ="0.1.3"
authors = ["Scott Donnelly <scott@donnel.ly>", "Rui Hu <code@mrhooray.com>"]
description = "K-dimensional tree in Rust for fast geospatial indexing and nearest neighbors lookup"
keywords = ["kd-tree", "kdtree", "kd", "nearest", "neighbor"]
readme = "README.md"
repository = "https://github.com/sdd/kiddo"
documentation = "https://docs.rs/kiddo"
license = "MIT OR Apache-2.0"
autobenches = false
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
rand = "0.6.5"
lazy_static = "1.4.0"
criterion = "0.3.4"
aligned = "0.3.4"
serde = "1.0"
serde_json = "1.0.64"

[dependencies]
num-traits = "0.2"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[features]
serialize = ["serde", "serde_derive"]

[[bench]]
name = "add_points"
harness = false

[[bench]]
name = "nearest_3d_unit_sphere"
harness = false

[[bench]]
name = "within_3d_unit_sphere"
harness = false

[[bench]]
name = "best_within_3d_unit_sphere"
harness = false
